--- a/styles.css
+++ b/styles.css
@@ -569,7 +569,7 @@ img[fetchpriority=high] {
   padding: 0;
   line-height: 1.2;
   height: auto;
-  min-height: 3.5rem
+  min-height: 3.56rem
 }
 
 .canvas-skills-title h2 {
@@ -577,7 +577,7 @@ img[fetchpriority=high] {
   padding: .2em 0;
   height: auto;
   line-height: 1.2;
-  min-height: 1.3rem
+  min-height: 3.18rem
 }
 
 .canvas-skills-title h1,
@@ -594,13 +594,14 @@ img[fetchpriority=high] {
   position: relative;
   padding-bottom: 10rem;
   height: auto;
-  min-height: 100vh;
   contain: layout;
   overflow: hidden
 }
 
 main#projects.about-me {
-  display: flow-root
+  display: flow-root;
+  height: auto;
+  min-height: 100vh;
 }
 
 .skills-main {
@@ -622,7 +623,7 @@ main#projects.about-me {
   width: 100%;
   max-width: 100vw;
   height: auto;
-  min-height: 10rem;
+  min-height: 100vh;
   margin: 1em auto 0;
   border-radius: .225vw;
   box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1)
@@ -1089,7 +1090,7 @@ main#projects.about-me {
   width: 100%;
   max-width: 100vw;
   height: auto;
-  min-height: 5rem
+  min-height: 119.75rem;
 }
 
 .resume-summary {
@@ -1113,7 +1114,7 @@ main#projects.about-me {
   height: auto;
   padding-top: 4rem;
   font-size: clamp(1rem, 1.2rem, 1.8rem);
-  min-height: 1rem
+  min-height: 6.75rem;
 }
 
 .resume-summary h2,
@@ -1140,8 +1141,36 @@ main#projects.about-me {
   padding: .2em
 }
 
+#resume-part1 {
+  min-height: 68rem;
+}
+
+#resume-part2 {
+  min-height: 62.68rem;
+}
+
+#section1 {
+  min-height: 81.43
+}
+
+#section2 {
+  min-height: 76.125
+}
+
+#section3 {
+  min-height: 19.5rem;
+}
+
+#section4 {
+  min-height: 58.125;
+}
+
+#section4 {
+  min-height: 426rem;
+}
+
 .education {
-  margin-top: 10vh
+  margin-top: 10vh;
 }
 
 .project-images {
@@ -1265,7 +1294,7 @@ main#projects.about-me {
   margin: 2em auto;
   width: auto;
   height: auto;
-  min-height: 2rem;
+  min-height: 2.8125rem;
   font-size: 1.1rem;
   font-weight: 600;
   text-decoration: none;
@@ -1286,7 +1315,8 @@ main#projects.about-me {
 
 .click-me a {
   text-decoration: none;
-  color: #fff
+  color: #fff;
+  min-height: 1.65rem;
 }
 
 .project-link {
@@ -1310,7 +1340,7 @@ main#projects.about-me {
   max-width: 100vw;
   height: auto;
   margin: 1em auto;
-  min-height: 1rem
+  min-height: 1.95rem;
 }
 
 .takeme-text h3 {
@@ -1320,7 +1350,8 @@ main#projects.about-me {
   text-decoration: underline cyan;
   height: auto;
   width: 100%;
-  max-width: 100vw
+  max-width: 100vw;
+  min-height: 1.95rem;
 }
 
 #back-to-top:hover {
@@ -1452,6 +1483,10 @@ button.submit-button:hover {
   width: 93%;
   height: auto;
   object-fit: cover
+}
+
+.hubspot img {
+  min-height: 31.36rem;
 }
 
 .border-white {
@@ -1624,7 +1659,7 @@ button.submit-button:hover {
   align-items: center;
   flex-direction: column;
   height: auto;
-  min-height: 4rem;
+  min-height: 5.06rem;
   margin: 1em auto 2em;
   line-height: 1.5;
   background-color: #fff;
@@ -1636,7 +1671,7 @@ button.submit-button:hover {
   font-size: clamp(1rem, 2vw, 2rem);
   height: auto;
   width: 100%;
-  min-height: 1.2rem
+  min-height: 1.5rem
 }
 
 .author-bio-text h2 {
@@ -1653,12 +1688,20 @@ main#projects.about-me {
   height: auto
 }
 
-.grade-container h3,
-.grade-container p,
-.grade-text,
-.grade-title,
+.grade-container p {
+  min-height: 2rem;
+}
+
+.grade-text {
+  min-height: 42.5rem;
+}
+
 .pagespeed-grade-title {
   min-height: 2rem
+}
+
+.grade-title {
+  min-height: 2.25rem;
 }
 
 .grade-container {
@@ -1695,14 +1738,18 @@ main#projects.about-me {
   padding: 1em
 }
 
-#desktop-grade1 h3,
-#desktop-grade2 h3 {
-  font-size: 1rem
+.grade-container h3 {
+  font-size: clamp(1rem, 1.1rem, 2.3rem);
+  min-height: 3.08rem;
+}
+
+.grade-container p {
+  font-size: clamp(1.2rem, 1.5rem, 2rem);
+  min-height: 2.09rem;
 }
 
 .grade-container h3,
 .grade-container p {
-  font-size: clamp(1rem, 1.3vw, 1.25rem);
   line-height: 1.4;
   text-align: center;
   word-break: break-all
@@ -1803,7 +1850,8 @@ main#projects.about-me {
   object-fit: cover;
   padding: 0 1em;
   box-sizing: border-box;
-  margin: 0 auto
+  margin: 0 auto;
+  min-height: 11.625;
 }
 
 .cta-section img,
@@ -1815,7 +1863,27 @@ main#projects.about-me {
   height: auto;
   margin: 0 auto;
   object-fit: cover;
-  min-height: 5rem
+}
+
+#moodboard-img img {
+  min-height: 20.75;
+}
+
+#past-meets-future-img img {
+  min-height: 28.93;
+}
+
+#cute-robot-img img {
+  min-height: 17.18rem;
+}
+
+.wireframe-img img,
+.pagespeed-grade-img img {
+  min-height: unset;
+}
+
+.grade-img img {
+  min-height: 21.375rem;
 }
 
 .cta-section p {
@@ -1840,12 +1908,6 @@ main#projects.about-me {
   font-size: 1.3rem;
   padding: .3em;
   font-weight: 600
-}
-
-.mood-board,
-.resume-border {
-  height: auto;
-  min-height: 8rem
 }
 
 .casestudy {
@@ -2013,7 +2075,7 @@ main#projects.about-me {
 
 .site-hero-img {
   aspect-ratio: 1.95/1;
-  min-height: clamp(10rem, 30vw, 12rem)
+  min-height: clamp(13.625rem, 20.31vw, 33.75rem)
 }
 
 .site-hero-img img,
@@ -2186,6 +2248,11 @@ main#projects.about-me {
     min-height: 1.2rem
   }
 
+  .about-me {
+    min-height: 2389rem;
+    overflow: hidden;
+  }
+
   .canvas-skills-grid {
     display: flex;
     flex-direction: column;
@@ -2194,7 +2261,7 @@ main#projects.about-me {
     height: auto;
     align-items: center;
     justify-content: space-between;
-    min-height: clamp(31.93rem, 32rem, 42.187rem)
+    min-height: 33rem;
   }
 
   .canvas-skills-img {
@@ -2203,7 +2270,6 @@ main#projects.about-me {
     width: 100%;
     max-width: 100vw;
     height: auto;
-    min-height: clamp(16.375rem, 17.125rem, 26.56rem);
     contain: layout paint
   }
 
@@ -2211,7 +2277,8 @@ main#projects.about-me {
     width: 100%;
     height: auto;
     aspect-ratio: inherit;
-    border: .2em solid #000
+    border: .2em solid #000;
+    min-height: 17.5rem;
   }
 
   .canvas-skills-title {
@@ -2234,7 +2301,7 @@ main#projects.about-me {
   .canvas-skills-title h2 {
     padding: .4em 0 1em;
     height: auto;
-    min-height: 5.06rem;
+    min-height: 5rem;
     font-size: 2rem
   }
 
@@ -2244,7 +2311,6 @@ main#projects.about-me {
   .wireframe {
     width: 100%;
     height: auto;
-    min-height: 5rem
   }
 
   #projects {
@@ -2264,11 +2330,11 @@ main#projects.about-me {
   .grade-img,
   .mood-board,
   .project-images {
-    padding: .2em
+    padding: .2em;
   }
 
   .grade-text {
-    padding: .5em
+    padding: .5em;
   }
 
   .site-hero-img img,
@@ -2379,6 +2445,43 @@ main#projects.about-me {
     aspect-ratio: inherit
   }
 
+  #resume-part1 {
+    min-height: 68rem;
+  }
+
+  #resume-part2 {
+    min-height: 320rem;
+  }
+
+
+  #resume-part3 {
+    min-height: 21.68rem;
+  }
+
+  #resume-part3 {
+    min-height: 320rem;
+  }
+
+  #section1 {
+    min-height: 80.94rem;
+  }
+
+  #section2 {
+    min-height: 332rem;
+  }
+
+  #section3 {
+    min-height: 333rem;
+  }
+
+  #section4 {
+    min-height: 426rem;
+  }
+
+  .education {
+    margin-top: 10vh;
+  }
+
   .headshot-container {
     align-items: last baseline
   }
@@ -2440,7 +2543,6 @@ main#projects.about-me {
     width: 95%;
     max-width: 95%;
     height: auto;
-    min-height: 20rem
   }
 
   .takeme-text {
@@ -2451,7 +2553,6 @@ main#projects.about-me {
   .cta-section {
     max-width: 100%;
     height: auto;
-    min-height: 10rem
   }
 
   .author-bio img,
@@ -2460,7 +2561,8 @@ main#projects.about-me {
     height: auto;
     margin: 0 auto;
     object-fit: cover;
-    aspect-ratio: inherit
+    aspect-ratio: inherit;
+    min-height: 9.3125rem;
   }
 
   .author-bio-text,
@@ -2470,12 +2572,14 @@ main#projects.about-me {
 
   .author-bio h2 {
     font-size: clamp(1.1rem, 2vw, 1.3rem);
-    height: auto
+    height: auto;
+    min-height: 1.1rem;
   }
 
   .author-bio p {
     font-size: 1rem;
-    height: auto
+    height: auto;
+    min-height: 1rem;
   }
 
   .author-bio-text {
@@ -2484,7 +2588,8 @@ main#projects.about-me {
 
   .list-items ul li {
     color: #fff;
-    width: 75%
+    width: 75%;
+    min-height: 1rem;
   }
 
   .collections-grid,
@@ -2651,13 +2756,14 @@ main#projects.about-me {
     position: relative;
     padding-bottom: 10rem;
     height: auto;
-    min-height: 100vh;
     contain: layout;
     overflow: hidden
   }
 
   main#projects.about-me {
-    display: flow-root
+    display: flow-root;
+    height: auto;
+    min-height: 100vh;
   }
 
   .design {
@@ -2786,15 +2892,15 @@ main#projects.about-me {
   }
 
   .resume-summary p {
-    min-height: .9rem;
+    min-height: unset;
     height: auto;
     line-height: 1.28
   }
 
   .resume-summary {
     height: auto;
-    min-height: 8rem
   }
+
 
   .project-links {
     min-height: 10rem;
