--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -815,7 +815,7 @@ button.submit-button:hover {
     height: auto;
     width: 100%;
     max-width: 100vw;
-    min-height: clamp(43.75rem, 95vw, 53.3125rem);
+    min-height: 36.05rem;
     margin: 0 auto;
   }
 
@@ -826,7 +826,6 @@ button.submit-button:hover {
     width: 100%;
     max-width: 100vw;
     background-color: #000;
-    min-height: 33.8rem;
   }
 
   img[fetchpriority=high] {
@@ -839,7 +838,6 @@ button.submit-button:hover {
     width: 90%;
     max-width: 90vw;
     margin: 1em auto;
-    min-height: 16rem;
   }
 
   .canvas-skills-title h1 {
@@ -855,11 +853,13 @@ button.submit-button:hover {
   p {
     line-height: 1.4;
   }
-
-
 }
 
 @media (max-width:768px) {
+  .canvas-skills-grid {
+    min-height: 33.8rem;
+  }
+
   .fancy-border-img {
     border: 0.5em solid white;
     outline: 0.2em solid white;
@@ -1006,6 +1006,9 @@ button.submit-button:hover {
 }
 
 @media (max-width: 680px) {
+  .canvas-skills-grid {
+    min-height: 26.3rem;
+  }
 
   .fancy-border-img {
     border: 0.5em solid white;
@@ -1083,6 +1086,10 @@ button.submit-button:hover {
     height: auto;
   }
 
+  .canvas-skills-grid {
+    min-height: 22rem;
+  }
+
   .cavnas-skills-grid img {
     border: 1em solid black;
   }
@@ -1114,6 +1121,9 @@ button.submit-button:hover {
 }
 
 @media (max-width:320px) {
+  .canvas-skills-grid {
+    min-height: 22rem;
+  }
 
   .canvas-skills-title {
     padding: 1em;
