--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -303,7 +303,7 @@ nav {
   max-width: 100vw;
   height: auto;
   box-sizing: border-box;
-  min-height: 20rem;
+  min-height: 22.5rem;
   contain: layout;
   overflow: hidden;
   background-color: #000;
@@ -315,13 +315,11 @@ nav {
   height: auto;
   overflow: hidden;
   background-color: #000;
-  min-height: 25rem;
   object-fit: cover;
   margin: 0 auto;
   border: 1em solid #000;
   border-right: 0.5em solid #000;
   flex: 1 1 30%;
-  min-height: 20rem;
 }
 
 img[fetchpriority=high] {
@@ -343,9 +341,7 @@ img[fetchpriority=high] {
   height: auto;
   max-height: 100%;
   line-height: 1.4;
-  min-height: 25rem;
   flex: 1 1 70%;
-  min-height: 20rem;
   contain: layout;
 }
 
@@ -815,8 +811,8 @@ button.submit-button:hover {
     height: auto;
     width: 100%;
     max-width: 100vw;
-    min-height: 36.05rem;
     margin: 0 auto;
+    min-height: 33.875rem;
   }
 
   .canvas-skills-grid img {
@@ -841,25 +837,25 @@ button.submit-button:hover {
   }
 
   .canvas-skills-title h1 {
-    padding: 0.2em;
+    padding: 0.4em 0.4em 0.2em;
     font-size: clamp(2rem, 4rem, 5rem);
+    line-height: 1.3;
   }
 
   .canvas-skills-title h2 {
     font-size: clamp(1.8rem, 3rem, 4rem);
-    padding: .2em;
+    padding: .2em 0.4em 0.4em;
+    line-height: 1.2;
   }
 
   p {
     line-height: 1.4;
   }
+
+
 }
 
 @media (max-width:768px) {
-  .canvas-skills-grid {
-    min-height: 33.8rem;
-  }
-
   .fancy-border-img {
     border: 0.5em solid white;
     outline: 0.2em solid white;
@@ -872,12 +868,20 @@ button.submit-button:hover {
     margin: 6em auto 6em;
   }
 
-  .canvas-skills-title {
-    min-height: 16rem;
+  .canvas-skills-title h2 {
+    line-height: 1.2;
+    font-size: 3rem;
+    padding: 0.2em 0.4em 0.4em;
+  }
+
+  .canvas-skills-title h1 {
+    line-height: 1.3;
+    font-size: 3.5rem;
+    padding: 0.4em 0.4em 0.2em;
   }
 
   .nav-logo {
-    height: calc(200px / 2.38);
+    height: calc(12.5rem / 2.38);
     width: auto;
     max-height: 105px;
     padding-left: 1em;
@@ -1007,7 +1011,7 @@ button.submit-button:hover {
 
 @media (max-width: 680px) {
   .canvas-skills-grid {
-    min-height: 26.3rem;
+    min-height: 469px;
   }
 
   .fancy-border-img {
@@ -1022,19 +1026,14 @@ button.submit-button:hover {
     margin: 6em auto 3em;
   }
 
-  .canvas-skills-grid img {
-    min-height: 22rem;
-  }
-
   .canvas-skills-title {
     padding: 0;
     height: 180px;
-    min-height: 15rem;
     max-height: 180px;
     width: 90%;
     max-width: 90vw;
     margin: 1em auto;
-
+    padding: 0.3em;
   }
 
   .canvas-skills-title h1 {
@@ -1057,6 +1056,10 @@ button.submit-button:hover {
 }
 
 @media (max-width:480px) {
+  .canvas-skills-grid {
+    min-height: 22.5rem;
+  }
+
   .side-nav {
     height: auto;
     min-height: 17rem;
@@ -1086,10 +1089,6 @@ button.submit-button:hover {
     height: auto;
   }
 
-  .canvas-skills-grid {
-    min-height: 22rem;
-  }
-
   .cavnas-skills-grid img {
     border: 1em solid black;
   }
@@ -1099,7 +1098,6 @@ button.submit-button:hover {
     width: 90%;
     max-width: 90vw;
     margin: 1em auto 2em;
-    min-height: 200px;
   }
 
   .canvas-skills-title h1,
@@ -1112,18 +1110,17 @@ button.submit-button:hover {
   .canvas-skills-title h1 {
     font-size: 2.5rem;
     line-height: 1.8;
+    padding: 0.2em;
   }
 
   .canvas-skills-title h2 {
     font-size: 2rem;
     line-height: 1.6
   }
+
 }
 
 @media (max-width:320px) {
-  .canvas-skills-grid {
-    min-height: 22rem;
-  }
 
   .canvas-skills-title {
     padding: 1em;
