--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -343,6 +343,7 @@ img[fetchpriority=high] {
   flex: 1 1 70%;
   contain: layout;
   padding: clamp(0.5rem, 2vw, 1.5rem);
+  min-height: calc(30vw * 0.72);
 }
 
 .canvas-skills-title h1,
