--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -302,10 +302,13 @@ nav {
   width: 100%;
   max-width: 100vw;
   height: auto;
+  min-height: 27rem;
   box-sizing: border-box;
-  contain: layout;
+  contain: none;
   overflow: hidden;
   background-color: #000;
+  contain: paint;
+  padding: 0.2em;
 }
 
 .canvas-skills-grid picture,
@@ -314,22 +317,27 @@ nav {
 
 }
 
-.canvas-skills-grid picture {
+head picture {
   flex: 0 0 40%;
   max-width: 40%;
   min-width: 40%;
-  display: block;
-  background-color: #000;
-  border: 1em solid #000;
-  border-right: 0.5em solid #000;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  max-height: 100%;
+  contain: none;
 }
 
 .canvas-skills-grid img {
-  display: block;
   width: 100%;
   height: auto;
   object-fit: cover;
-  aspect-ratio: 16/9;
+  border: 1em solid #000;
+  border-right: 0.5em solid #000;
+
 }
 
 img[fetchpriority=high] {
@@ -345,7 +353,6 @@ img[fetchpriority=high] {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
   flex-basis: 60%;
   max-width: 60%;
   min-width: 60%;
