--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -210,7 +210,6 @@ p a::after {
   background-color: #000
 }
 
-header,
 nav {
   width: 100%;
   max-width: 100%;
@@ -302,7 +301,8 @@ nav {
   width: 100%;
   max-width: 100vw;
   height: auto;
-  min-height: 27rem;
+  min-height: 13.125;
+  max-height: 51.3vh;
   box-sizing: border-box;
   contain: none;
   overflow: hidden;
@@ -317,14 +317,14 @@ nav {
 
 }
 
-head picture {
+.canvas-skills-grid picture {
   flex: 0 0 40%;
   max-width: 40%;
   min-width: 40%;
   background-color: black;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: stretch;
   align-items: center;
   height: auto;
   max-height: 100%;
@@ -337,7 +337,6 @@ head picture {
   object-fit: cover;
   border: 1em solid #000;
   border-right: 0.5em solid #000;
-
 }
 
 img[fetchpriority=high] {
